# docky

./: .bzrignore  AUTHORS  COPYRIGHT  Docky-2.sln  Docky-2.userprefs  Makefile.am  NEWS  autogen.sh  build.rules.common.mk  build.rules.core.mk  build.rules.docklets.mk  build.rules.mk  configure.ac
Docky/: AssemblyInfo.cs.in  Docky-2.pidb  Docky.csproj  Docky.csproj.pidb  Docky.pidb  Makefile.am  docky.in
Docky.CairoHelper/: Docky.CairoHelper.csproj  Docky.CairoHelper.pidb  Makefile.am
Docky.CairoHelper/Cairo/: Color_Extensions.cs  Context_Extensions.cs
Docky.CairoHelper/Docky.CairoHelper/: DockySurface.cs
Docky.DBus/: Docky.DBus.csproj  Makefile.am
Docky.DBus/Docky.DBus/: DBusManager.cs  DockManagerDBus.cs  DockManagerDBusItem.cs  DockyDBus.cs  DockyDBusItem.cs  DockyDBusMenus.cs  IDockManagerDBus.cs  IDockManagerDBusItem.cs  IDockyDBus.cs  IDockyDBusItem.cs  IDockyDBusMenus.cs  RemoteDockItem.cs  RemoteFileMenuEntry.cs  RemoteItem.cs  RemoteMenuEntry.cs
Docky.Items/: Docky.Items.csproj  Docky.Items.pidb  Makefile.am
Docky.Items/Docky.Items/: AbstractDockItem.cs  AbstractDockItemProvider.cs  AddRemoveChangeType.cs  ApplicationDockItem.cs  ApplicationDockItemProvider.cs  ColoredIconDockItem.cs  Enumerable_Extensions.cs  FileApplicationProvider.cs  FileDockItem.cs  IDockItemProvider.cs  IconDockItem.cs  IconEmblem.cs  ItemState.cs  ItemsChangedArgs.cs  ProxyDockItem.cs  WindowDockItem.cs  WnckDockItem.cs
Docky.Items/Docky.Menus/: IconMenuItem.cs  MenuItem.cs  MenuList.cs  ProxyMenuItem.cs  RelatedFileMenuItem.cs  SeparatorMenuItem.cs  WindowMenuItem.cs
Docky.Items/Docky.Painters/: AbstractDockPainter.cs  PagingDockPainter.cs
Docky.Items/Resources/: Docky.Items.addin.xml  Docky.Items.addin.xml.in
Docky.Services/: AssemblyInfo.cs  Docky.Services.csproj  Docky.Services.dll.config  Docky.Services.pidb  Makefile.am
Docky.Services/Docky.Services/: .NetworkService~.cs  .Services~.cs  ConnectionStatusChangeEventArgs.cs  DesktopItemService.cs  DockServices.cs  DrawingService.cs  Helper.cs  HelperMetadata.cs  HelperService.cs  HelperStatusChangedEventArgs.cs  IPreferences.cs  Log.cs  LogTSender.cs  NativeInterop.cs  NotificationService.cs  PathsService.cs  Preferences.cs  PreferencesChangedEventArgs.cs  PreferencesService.cs  SystemService.cs  ThemeService.cs  WindowMatcherService.cs
Docky.Services/Gtk/: MountOperation.cs
Docky.Services/gtk-gui/: Docky.Services.GUI.AnonymousWidget.cs  Docky.Services.GUI.MountOperationDialog.cs  Docky.Services.GUI.PasswordSaveWidget.cs  Docky.Services.GUI.PasswordWidget.cs  Docky.Services.GUI.UsernameWidget.cs  gui.stetic
Docky.StandardPlugins/: Docky.StandardPlugins.csproj  Makefile.am  docky.standardplugins.pc.in
Docky.StandardPlugins/BatteryMonitor/: BatteryMonitorDockItem.cs  BatteryMonitorItemProvider.cs  BatteryMonitorProcItem.cs  BatteryStatus.cs
Docky.StandardPlugins/Bookmarks/: BookmarkDockItem.cs  BookmarksItemProvider.cs
Docky.StandardPlugins/CPUMonitor/: CPUMonitorDockItem.cs  CPUMonitorItemProvider.cs
Docky.StandardPlugins/Clock/: ClockDockItem.cs  ClockItemProvider.cs
Docky.StandardPlugins/Docky.DefaultClockTheme/: Makefile.am
Docky.StandardPlugins/GMail/: AbstractLoginWidget.cs  GMailAtom.cs  GMailConfiguration.cs  GMailDockItem.cs  GMailItemProvider.cs  GMailLoginConfig.cs  GMailMenuItem.cs  GMailPreferences.cs
Docky.StandardPlugins/Mounter/: ComputerItem.cs  MountItem.cs  MountProvider.cs
Docky.StandardPlugins/RemovableDevices/: ComputerItem.cs  VolumeItem.cs  VolumeProvider.cs
Docky.StandardPlugins/Resources/: Docky.StandardPlugins.addin.xml
Docky.StandardPlugins/Switcher/: SwitcherDockItem.cs  SwitcherItemProvider.cs
Docky.StandardPlugins/Trash/: TrashDockItem.cs  TrashItemProvider.cs
Docky.StandardPlugins/Weather/: IWeatherSource.cs  WeatherConfigurationDialog.cs  WeatherController.cs  WeatherItemProvider.cs
Docky.Widgets/: Docky.Widgets.csproj  Makefile.am
Docky.Widgets/Docky.Widgets/: AbstractLoginWidget.cs  AbstractTile.cs  AbstractTileObject.cs  Actor.cs  AnimatedBox.cs  AnimatedHBox.cs  AnimatedVBox.cs  AnimatedWidget.cs  Choreographer.cs  ConfigDialog.cs  ExtensionMethods.cs  ITile.cs  ListOnlyTileView.cs  SearchEntry.cs  SingleActorStage.cs  Stage.cs  Tile.cs  TileView.cs  WrapLabel.cs
Docky.Widgets/gtk-gui/: Docky.Widgets.AbstractLoginWidget.cs  gui.stetic
Docky.Windowing/: AssemblyInfo.cs  Docky.Windowing.csproj  Docky.Windowing.dll.config  Makefile.am  docky.windowing.pc.in
Docky.Windowing/Windowing/: ClickAction.cs  DesktopFileChangedEventArgs.cs  DesktopItem.cs  LayoutUtils.cs  ScreenUtils.cs  Viewport.cs  WindowControl.cs  WindowMatcher.cs  WindowUtils.cs
Docky.Windowing/Wnck/: Window_Extensions.cs
Docky.Windowing/Xlib/: X11Atoms.cs  Xlib.cs
Docky.Zeitgeist/: Docky.Zeitgeist.csproj  Makefile.am
Docky.Zeitgeist/Zeitgeist/: ZeitgeistFilter.cs  ZeitgeistProxy.cs  ZeitgeistResult.cs
Docky/Docky/: ConfigurationWindow.cs  DockController.cs  DockPlacementWidget.cs  DockletTile.cs  Docky.cs  HelperTile.cs  PluginManager.cs  ThemeController.cs  UserArgs.cs
Docky/Gtk/: Widget_Extensions.cs
Docky/Resources/: Docky.addin.xml
Docky/gtk-gui/: Docky.ConfigurationWindow.cs  Docky.Interface.DockPreferences.cs  generated.cs  gui.stetic
StandardPlugins/: Makefile.am
StandardPlugins/BatteryMonitor/: BatteryMonitor.csproj  Makefile.am
StandardPlugins/Bookmarks/: Bookmarks.csproj  Makefile.am
StandardPlugins/CPUMonitor/: CPUMonitor.csproj  Makefile.am
StandardPlugins/Clippy/: Clippy.csproj  Makefile.am
StandardPlugins/Clock/: Clock.csproj  Makefile.am
StandardPlugins/Desktop/: Desktop.csproj  Makefile.am
StandardPlugins/GMail/: GMail.csproj  Makefile.am
data/: Makefile.am  docky.desktop.in  docky.schemas.in  remaps.ini
scripts/: Makefile.am  banshee_control.py  deluge_badge.py  emesene_control.py  gajim_badge.py  gtg_menus.py  liferea.py  liferea_badge.py  open_terminal_here.py  pidgin_control.py  rhythmbox_control.py  tomboy_menus.py  transmission_badge.py  tsclient_menus.py  zeitgeist_docky.py  zeitgeist_journal.py  zeitgeist_menus.py
(+323 files in other folders)
