SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NPR \
	RecentDocuments \
	Trash \
	Weather

DIST_SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NPR \
	RecentDocuments \
	Trash \
	Weather
