SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather

DIST_SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather
