SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

DIST_SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

