scriptdir = $(datadir)/docky/helpers
dist_script_SCRIPTS = zeitgeist_docky.py	\
		      zeitgeist_journal.py	\
		      open_terminal_here.py	\
		      pidgin_control.py		\
		      tomboy_menus.py		\
		      rhythmbox_control.py	\
		      liferea.py		\
		      banshee_control.py

SUBDIRS = 	docky \
			metadata
