scriptdir = $(datadir)/docky/helpers

dist_script_SCRIPTS = \
	banshee_control.py	\
	deluge_badge.py		\
	emesene_control.py	\
	gajim_badge.py		\
	gtg_menus.py		\
	liferea_badge.py	\
	open_terminal_here.py	\
	pidgin_control.py	\
	rhythmbox_control.py	\
	tomboy_menus.py		\
	transmission_badge.py	\
	zeitgeist_docky.py	\
	zeitgeist_journal.py

SUBDIRS = \
	docky \
	metadata
